@@ -4,16 +4,15 @@ import com.kiwiko.webapp.mvc.lifecycle.api.LifeCycleHook;
 import com.kiwiko.webapp.mvc.lifecycle.api.LifeCycleHookRegistry;
 import com.kiwiko.webapp.mvc.lifecycle.api.ShutdownHook;
 import com.kiwiko.webapp.mvc.lifecycle.api.StartupHook;
-import com.kiwiko.webapp.push.internal.PushServiceShutdownHook;
 import com.kiwiko.webapp.streaming.pushservice.internal.impl.websockets.spring.subscribers.setup.SubscribePushServicesCreator;
 
 import javax.inject.Inject;
+import java.util.Collections;
 import java.util.Set;
 
 public class DependencyLifecycleHookRegistry implements LifeCycleHookRegistry {
 
     @Inject private SubscribePushServicesCreator subscribePushServicesCreator;
-    @Inject private PushServiceShutdownHook pushServiceShutdownHook;
 
     @Override
     public void register(LifeCycleHook hook) {
@@ -27,7 +26,7 @@ public class DependencyLifecycleHookRegistry implements LifeCycleHookRegistry {
 
     @Override
     public Set<ShutdownHook> getShutdownHooks() {
-        return Set.of(pushServiceShutdownHook);
+        return Collections.emptySet();
     }
 
     @Override
